--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Notes App</title>
+  <title>Sistema Gestor de Eventos</title>
   <!-- BOOTSTRAP - BOOTSWATCH THEME - COSMOS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/materia/bootstrap.min.css">
   <!-- FONT AWESOME -->
