--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -89,18 +89,18 @@
         </script>
         <div class="form-group">
           <input
-            type="text"
+            type="date"
             name="date"
             class="form-control"
-            placeholder="Fecha: dd/mm/aaaa"
+            placeholder="Fecha: aaaa/mm/dd"
           />
         </div>
         <div class="form-group">
           <input
-            type="text"
+            type="time"
             name="schedule"
             class="form-control"
-            placeholder="Hora: hh:mm"
+            placeholder="hh:mm"
           />
         </div>
         <div class="form-group">
